2005-10-20  James Antill  <james@and.org>

	* src/evnt.c (EVNT__RESOLVE_NAME): Minor performance tweak for addrs
	that are really IPs.

	* src/httpd_conf_main.c (httpd__match_make): Fix bad reference setup,
	leaks Vstr's.

	* src/evnt.c (evnt_poll_add): Work around valgrind uninit errors.

	* tst/tst_httpd_conf.pl: Auto work out max conf files (and fix 8 and 9
	to work together).

	* scripts/tst-run.sh: Added script to run local config.

	* src/date.c (date_localtime): Added function.
	(date_syslog): Changed to use the Date_store, as strftime() is
	horrible to use from a signal handler ... and _slow_ on FC4.

	* tools/and-httpd.in: Use --config-dir

	* src/and-httpd.c (usage): Add --config-dir options.

	* src/opt_serv.c (opt_serv_sc_config_dir): Add internal conf.d
	processing.

	* tools/mime_types_extra.txt: Fix .xml files mime/type

2005-10-18  James Antill  <james@and.org>

	* NEWS: Release 0.99.4

2005-10-18  James Antill  <james@and.org>

	* src/opt_serv.c (opt_serv_sc_append_homedir): Resolve 
	username -> homedir for paths.

	* src/and-httpd.c (serv_cmd_line): Resolve username -> uids before
	calling chroot().

2005-10-17  James Antill  <james@and.org>

	* src/httpd.c (HTTPD_CONF_ZIP_LIMIT_MIN): Add minimum file length for
	trying zipped files.

	* src/httpd.c (http_fin_err_req): Fix fd bug on zero length error
	files.
	(http_fin_err_req): Fix bug on HEAD ops on custom err files.

	* src/httpd_conf_req.c (httpd__conf_req_d1): Add ability to give
	numbers to dynamic expires configurations.

	* src/vlg.c (VLG__SIG_BLOCK_BEG): Don't do anything before we set
	vlg__in_signal.

2005-10-16  James Antill  <james@and.org>

	* src/opt_serv.c (opt_serv__sig_raise_cont): Change _info to _warn.

	* src/httpd.c (http_parse_quality): Fix bug in parsing quality values of
	1.0 and 1.00
	(http_fin_err_req): Fix assert() when outputting gzipped custom error
	pages.

2005-10-15  James Antill  <james@and.org>
