@@ -1,3 +1,11 @@
+2005-10-21  James Antill  <james@and.org>
+
+	* src/conf.h (conf_parse_num_token): Speed improvement.
+	(conf_parse_token): Always reset the copy of sects->num, as it could
+	have grown since we stored the token.
+
+	* src/httpd_conf_main.c (httpd__match_iter_nxt): Remove dead code.
+
 2005-10-20  James Antill  <james@and.org>
 
 	* src/evnt.c (EVNT__RESOLVE_NAME): Minor performance tweak for addrs
